--- a/index.html
+++ b/index.html
@@ -14,9 +14,8 @@
 
     <div id="root">
         <h1>  {{title}}</h1>
+        <img v-for="img in images" v-bind:src="img"/>
     </div>
-
-
 
     <script src="js/script.js"></script>
 </body>
