--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
     <div id="root">
         <h1>  {{title}}</h1>
+        <a href="https://www.youtube.com/watch?v=iqYJwWM-HGk">Clicca qua per scoprire il magico mondo</a>
         <img v-for="img in images" v-bind:src="img"/>
     </div>
 
